--- a/NCloud/NCloud/Views/Home/Index.cshtml
+++ b/NCloud/NCloud/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to the NCloud Service!</h1>
-    <a asp-action="Login" asp-controller="User" class="btn btn-primary align-middle">Login</a>
+    <a asp-action="Login" asp-controller="Account" class="btn btn-primary mt-5">Login</a>
+    <a asp-action="Register" asp-controller="Account" class="btn btn-primary mt-5 ml-3">Login</a>
 </div>
