--- a/NCloud/NCloud/Views/Home/Index.cshtml
+++ b/NCloud/NCloud/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to the NCloud Service!</h1>
-    <a asp-action="Login" asp-controller="Account" class="btn btn-primary mt-5">Login</a>
-    <a asp-action="Register" asp-controller="Account" class="btn btn-primary mt-5 ml-3">Login</a>
+    <h1 class="display-4 mb-5">Welcome to the NCloud Service!</h1>
+    <a asp-action="Login" asp-controller="Account" class="btn btn-primary">Login</a>
+    <a asp-action="Register" asp-controller="Account" class="btn btn-primary ms-3">Register</a>
 </div>
