Sidebar comleted, need further redesign

--- a/NCloud/NCloud/Views/Shared/_Layout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         <li class="nav-item">
                             <div class="dropdown">
                                 <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle">
+                                    <img src="" alt="hugenerd" width="30" height="30" class="rounded-circle">
                                     <span class="d-none d-sm-inline mx-1">User</span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end text-small shadow my-3 p-1">
