--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -10,12 +10,12 @@
                 </a>
                 <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                     <li class="nav-item">
-                        <a href="#" class="nav-link align-middle px-0">
+                        <a asp-controller="Drive" asp-action="Index" class="nav-link align-middle px-0">
                             <span class=""></span> <span class="ms-1 d-none d-sm-inline">DashBoard</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link align-middle px-0">
+                        <a asp-controller="Drive" asp-action="Details" asp-route-parentId="0" class="nav-link align-middle px-0">
                             <span class=""></span> <span class="ms-1 d-none d-sm-inline">My Files</span>
                         </a>
                     </li>
