--- a/NCloud/NCloud/wwwroot/css/site.css
+++ b/NCloud/NCloud/wwwroot/css/site.css
@@ -1,25 +1,25 @@
 ﻿@import url("navbar.css");
 
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
-details summary{
+details summary {
     list-style: none;
 }
 
@@ -33,6 +33,17 @@ summary:before {
 details[open] summary:before {
     content: "➖";
 }
+
 #iconforitemtype {
-    margin : 5px;
+    margin: 5px;
+}
+
+.itemlink {
+    text-decoration: none;
+    color: black;
+}
+
+.itemlink:hover {
+    text-decoration: underline;
+    color: black;
 }
