--- a/NCloud/NCloud/Views/Shared/_Layout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_Layout.cshtml
@@ -12,7 +12,8 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-primary border-bottom box-shadow">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Drive" asp-action="Index">NCloud</a>
+                <img src="/utilities/cloud_logo_no_text.png" alt="cloudlogo" width="40" height="40" class="me-3">
+                <a class="navbar-brand" asp-area="" asp-controller="Drive" asp-action="Index">NCloudDrive</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,17 +29,16 @@
                         <li class="nav-item">
                             <div class="dropdown">
                                 <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="" alt="hugenerd" width="30" height="30" class="rounded-circle">
+                                    <img src="/utilities/person-circle.svg" alt="hugenerd" width="30" height="30" class="rounded-circle m-1">
                                     <span class="d-none d-sm-inline mx-1">User</span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end text-small shadow my-3 p-1">
-                                    <li><a class="dropdown-item" href="#">New project...</a></li>
-                                    <li><a class="dropdown-item" href="#">Settings</a></li>
                                     <li><a class="dropdown-item" href="#">Profile</a></li>
+                                    <li><a class="dropdown-item" href="#">Settings</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item active text-dark rounded" asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
+                                    <li><a class="dropdown-item active text-dark rounded" asp-area="" asp-controller="Account" asp-action="Login">Logout</a></li>
                                 </ul>
                             </div>
                         </li>
