--- a/NCloud/NCloud/Views/Drive/Details.cshtml
+++ b/NCloud/NCloud/Views/Drive/Details.cshtml
@@ -12,13 +12,18 @@
             <button type="submit" value="" class="btn btn-primary" form="pathform"><img src="~/utilities/arrow-right-circle.svg" width=" 20" height="20" class="rounded-circle align-middle" /></button>
         </div>
     </form>
-    <div class="d-flex justify-content-end">
-        <div class="btn-group" role="group">
-            <button type="button" class="btn btn-primary"><a asp-controller="Drive" asp-action="Details" asp-route-parentId="@Model.ParentId"><img src="~/utilities/arrow-repeat.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
-            <button type="button" class="btn btn-secondary"><a asp-controller="Drive" asp-action="DownloadItems"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
-            <button type="button" class="btn btn-secondary"><a asp-controller="Drive" asp-action="UploadToCurrentFolder"><img src="~/utilities/cloud-upload.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
-            <button type="button" class="btn btn-secondary"><a asp-controller="Drive" asp-action="OpenTerminal"><img src="~/utilities/terminal.svg" width=" 20" height="20" class="align-middle" /></a></button>
-            <button type="button" class="btn btn-danger"><a asp-controller="Drive" asp-action="DeleteFromCurrentFolder"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
+    <div class="d-flex justify-content-between">
+        <div class="">
+            <button type="button" class="btn btn-primary"><a asp-controller="Drive" asp-action="Details" asp-route-parentId="@Model.ParentId" asp-route-currentPath="@ViewData["currentPath"]"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
+        </div>
+        <div class="">
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-primary"><a asp-controller="Drive" asp-action="Details" asp-route-parentId="@Model.ParentId" asp-route-currentPath="@ViewData["currentPath"]"><img src="~/utilities/arrow-repeat.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
+                <button type="button" class="btn btn-secondary"><a asp-controller="Drive" asp-action="DownloadItems"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
+                <button type="button" class="btn btn-secondary"><a asp-controller="Drive" asp-action="UploadToCurrentFolder"><img src="~/utilities/cloud-upload.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
+                <button type="button" class="btn btn-secondary"><a asp-controller="Drive" asp-action="OpenTerminal"><img src="~/utilities/terminal.svg" width=" 20" height="20" class="align-middle" /></a></button>
+                <button type="button" class="btn btn-danger"><a asp-controller="Drive" asp-action="DeleteFromCurrentFolder"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
+            </div>
         </div>
     </div>
 </div>
@@ -41,7 +46,7 @@
                                 <span id="iconforitemtype">
                                     <img src="@item.IconPath" width=" 20" height="20" class="item rounded align-bottom">
                                 </span>
-                                <a asp-action="Details" asp-route-parentId="@item.Id" class="itemlink">@item.Name</a>
+                                <a asp-action="Details" asp-route-folderName="@item.Name" asp-route-parentId="@item.Id" asp-route-currentPath="@ViewData["currentPath"]" class="itemlink">@item.Name</a>
                             </summary>
                             <fieldset class="border border-dark p-2 m-2 rounded">
                                 <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
