--- a/NCloud/NCloud/Views/Drive/Details.cshtml
+++ b/NCloud/NCloud/Views/Drive/Details.cshtml
@@ -14,7 +14,7 @@
     </form>
     <div class="d-flex justify-content-between">
         <div class="">
-            <button type="button" class="btn btn-primary"><a asp-controller="Drive" asp-action="Details" asp-route-parentId="@Model.ParentId" asp-route-currentPath="@ViewData["currentPath"]"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
+            <button type="button" class="btn btn-primary"><a asp-controller="Drive" asp-action="Back" asp-route-prevFolders="@ViewBag.PrevFolders" asp-route-currentPath="@ViewData["currentPath"]"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
         </div>
         <div class="">
             <div class="btn-group" role="group">
@@ -46,7 +46,7 @@
                                 <span id="iconforitemtype">
                                     <img src="@item.IconPath" width=" 20" height="20" class="item rounded align-bottom">
                                 </span>
-                                <a asp-action="Details" asp-route-folderName="@item.Name" asp-route-parentId="@item.Id" asp-route-currentPath="@ViewData["currentPath"]" class="itemlink">@item.Name</a>
+                                <a asp-action="Details" asp-route-id="@item.Id" asp-route-folderName="@item.Name" asp-route-parentId="@item.ParentId" asp-route-currentPath="@ViewData["currentPath"]" class="itemlink">@item.Name</a>
                             </summary>
                             <fieldset class="border border-dark p-2 m-2 rounded">
                                 <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
