--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -15,7 +15,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a asp-controller="Drive" asp-action="Details" asp-route-parentId="0" class="nav-link align-middle px-0">
+                        <a asp-controller="Drive" asp-action="Details" asp-route-id="0" class="nav-link align-middle px-0">
                             <span class="d-inline m-1"><img src="~/utilities/files.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">My Files</span>
                         </a>
                     </li>
