--- a/NCloud/NCloud/Views/Home/Index.cshtml
+++ b/NCloud/NCloud/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using NCloud.Views.Shared.Components
+
+@{
     ViewData["Title"] = "Welcome Page";
 }
 
@@ -6,4 +8,8 @@
     <h1 class="display-4 mb-5">Welcome to the NCloud Service!</h1>
     <a asp-action="Login" asp-controller="Account" class="btn btn-primary">Login</a>
     <a asp-action="Register" asp-controller="Account" class="btn btn-primary ms-3">Register</a>
+</div>
+
+<div class="card">
+    @(await Html.RenderComponentAsync<NCloud.Views.Shared.Components.Test>(RenderMode.ServerPrerendered, new {}))
 </div>
