--- a/NCloud/NCloud/Views/Shared/_Layout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_Layout.cshtml
@@ -64,3 +64,6 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+<base href="~/" />
+<script src="_framework/blazor.server.js"></script>
