Added componens namespace to ViewImports

--- a/NCloud/NCloud/Views/Home/Index.cshtml
+++ b/NCloud/NCloud/Views/Home/Index.cshtml
@@ -11,5 +11,5 @@
 </div>
 
 <div class="card">
-    @(await Html.RenderComponentAsync<NCloud.Views.Shared.Components.Test>(RenderMode.ServerPrerendered, new {}))
+    @(await Html.RenderComponentAsync<Test>(RenderMode.ServerPrerendered, new {}))
 </div>
