--- a/NCloud/NCloud/Views/_ViewImports.cshtml
+++ b/NCloud/NCloud/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using NCloud
 @using NCloud.Models
 @using NCloud.ViewModels
+@using NCloud.Views.Shared.Components
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
