--- a/NCloud/NCloud/Views/Account/Login.cshtml
+++ b/NCloud/NCloud/Views/Account/Login.cshtml
@@ -16,7 +16,7 @@
 			</div>
 			<div class="form-group">
 				<label asp-for="Password"></label>
-				<input asp-for="Password" class="form-control" />
+				<input type="password" asp-for="Password" class="form-control" />
 				<span asp-validation-for="Password" class="text-danger"></span>
 			</div><br />
 			<button class="btn btn-primary" type="submit">Login</button>
