--- a/NCloud/NCloud/Views/Account/Register.cshtml
+++ b/NCloud/NCloud/Views/Account/Register.cshtml
@@ -22,12 +22,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
+                <input type="password" asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PasswordRepeat"></label>
-                <input asp-for="PasswordRepeat" class="form-control" />
+                <input type="password" asp-for="PasswordRepeat" class="form-control" />
                 <span asp-validation-for="PasswordRepeat" class="text-danger"></span>
             </div><br />
 
