--- a/NCloud/NCloud/Views/Shared/_Layout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_Layout.cshtml
@@ -20,28 +20,25 @@
                 </button>
                 <div class="navbar-collapse collapse">
                     <ul class="navbar-nav flex-grow-1 d-flex justify-content-end align-items-center">
-@*                        <li>
-                            <form class="form-inline">
-                                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                            </form>
-                        </li>*@
-                        <li class="nav-item">
-                            <div class="dropdown">
-                                <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="/utilities/person-circle.svg" alt="hugenerd" width="30" height="30" class="rounded-circle m-1">
-                                    <span class="d-none d-sm-inline mx-1">User</span>
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end text-small shadow my-3 p-1">
-                                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item active text-dark rounded" asp-area="" asp-controller="Account" asp-action="Login">Logout</a></li>
-                                </ul>
-                            </div>
-                        </li>
+                        @*@if(User.Identity is not null && User.Identity!.IsAuthenticated)*@
+                        @*{*@
+                            <li class="nav-item">
+                                <div class="dropdown">
+                                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <img src="/utilities/person-circle.svg" alt="profile_icon" width="30" height="30" class="rounded-circle m-1">
+                                        <span class="d-none d-sm-inline mx-1">User</span>
+                                    </a>
+                                    <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end text-small shadow my-3 p-1">
+                                        <li><a class="dropdown-item" asp-action="Index" asp-controller="Account">Profile</a></li>
+                                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><a class="dropdown-item active text-dark rounded" asp-area="" asp-controller="Account" asp-action="Login">Logout</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                        @*}*@
                     </ul>
                 </div>
             </div>
