--- a/NCloud/NCloud/Views/Shared/_Layout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_Layout.cshtml
@@ -51,9 +51,9 @@
     </div>
 
     <footer class="border-top footer text-muted bg-secondary">
-        <div class="container text-dark">
+@*        <div class="container text-dark">
             &copy; 2023 - NCloud - <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-        </div>
+        </div>*@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
