Styling for new Layouts finished

--- a/NCloud/NCloud/Views/Shared/_Layout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-primary border-bottom box-shadow">
             <div class="container-fluid">
                 <img src="/utilities/cloud_logo_no_text.png" alt="cloudlogo" width="40" height="40" class="me-3">
-                <a class="navbar-brand" asp-area="" asp-controller="Drive" asp-action="Index">NCloudDrive</a>
+                <p class="navbar-brand">NCloudDrive</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
