--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -11,37 +11,44 @@
 <body>
     <div class="container-fluid">
         <div class="row flex-nowrap">
-            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-light m-1 rounded-2 border border-dark">
-                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                    <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                        <span class="fs-5 d-none d-sm-inline align-middle justify-content-center">Cloud Functions</span>
+            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-primary border border-dark fixed navwidth">
+                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-dark min-vh-100">
+                    <a asp-controller="Drive" asp-action="Index" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto">
+                        <span class="fs-5 d-none d-sm-inline align-middle justify-content-center"><img src="/utilities/cloud_logo_no_text.png" alt="cloudlogo" class="me-3 logo"></span>
                     </a>
                     <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                        <li class="nav-item">
-                            <a asp-controller="Drive" asp-action="Index" class="nav-link align-middle px-0">
+                        <li class="nav-item my-2">
+                            <a asp-controller="Drive" asp-action="Index" class="align-middle px-0 text-decoration-none text-dark">
                                 <span class="d-inline m-1"><img src="~/utilities/speedometer.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">DashBoard</span>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a asp-controller="Drive" asp-action="Details" asp-route-id="0" class="nav-link align-middle px-0">
+                        <li class="nav-item my-2">
+                            <a asp-controller="Drive" asp-action="Details" asp-route-id="0" class="align-middle px-0 text-decoration-none text-dark">
                                 <span class="d-inline m-1"><img src="~/utilities/files.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">My Files</span>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link align-middle px-0">
+                        <li class="nav-item my-2">
+                            <a href="#" class="align-middle px-0 text-decoration-none text-dark">
                                 <span class="d-inline m-1"><img src="~/utilities/code-slash.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">Editor</span>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link align-middle px-0">
+                        <li class="nav-item my-2">
+                            <a href="#" class="align-middle px-0 text-decoration-none text-dark">
                                 <span class="d-inline m-1"><img src="~/utilities/soundwave.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">Music Download</span>
                             </a>
                         </li>
                     </ul>
-                    <hr>
+                    <div class="dropdown mb-3 p-2 d-flex justify-content-center w-100 border border-3 rounded border-dark">
+                        <div>
+                            <a asp-action="Index" asp-controller="Account" class="text-dark text-decoration-none">
+                                <img src="/utilities/person-circle.svg" alt="profile_icon" width="30" height="30" class="rounded-circle m-1">
+                                <span class="d-inline m-1">User</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col py-3">
+            <div class="col py-3 maindiv">
                 @RenderBody()
             </div>
         </div>
