--- a/NCloud/NCloud/wwwroot/css/site.css
+++ b/NCloud/NCloud/wwwroot/css/site.css
@@ -43,7 +43,38 @@ details[open] summary:before {
     color: black;
 }
 
-.itemlink:hover {
-    text-decoration: underline;
-    color: black;
+    .itemlink:hover {
+        text-decoration: underline;
+        color: black;
+    }
+
+.fixed {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+}
+
+.maindiv {
+    width: 85%;
+    top: 0px;
+    right: 0px;
+    position: absolute;
+}
+
+.navwidth {
+    width: 15%;
+}
+
+.logo {
+    width: 100%;
+}
+
+#menu {
+    margin-top: 50%;
+}
+
+.hrline {
+    border: 4px solid black;
+    border-radius: 4px;
+    width: 100%;
 }
