Initial Folders created for users after login and default admin user

--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -20,6 +20,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a asp-controller="Drive" asp-action="SharedIndex" class="nav-link align-middle px-0">
+                            <span class="d-inline m-1"><img src="~/utilities/cloud.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">Shared Files</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a href="#" class="nav-link align-middle px-0">
                             <span class="d-inline m-1"><img src="~/utilities/code-slash.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">Editor</span>
                         </a>
